--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vue/cli-service": "^3.11.0",
     "axios": "^0.18.0",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-import": "^1.12.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "less": "^2.7.3",
